[S390X] Problems with -XX:+VerifyStack

XMLWordPrintable

    • b09
    • s390x
    • linux

      Created on behalf of Sidraya Jayagond.

      When running the following tests:
      - compiler/interpreter/TestVerifyStackAfterDeopt.java
      - compiler/interpreter/VerifyStackWithUnreachableBlock.java

      The VM crashes with "guarantee(last != NULL) failed: last may not be null" when running with -XX:+VerifyStack (debug build only).

      The failure is similar to the PPC bug JDK-8288105.

            Assignee:
            Tyler Steele
            Reporter:
            Tyler Steele
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: