8299683: [s390] Problems with -XX:+VerifyStack